clusters/oracle/immich/immich.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich
  namespace: default
  labels:
    app: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich
  template:
    metadata:
      labels:
        app: immich
    spec:
      containers:
        - name: immich
          image: ghcr.io/immich-app/immich-server:v2.4.1
          ports:
            - containerPort: 2283
          volumeMounts:
            - name: photos
              mountPath: /data
      volumes:
        - name: photos
          persistentVolumeClaim:
            claimName: photos-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: immich
  namespace: default
  annotations:
    tailscale.com/expose: "true"
    tailscale.com/hostname: "immich"
spec:
  selector:
    app: immich
  ports:
    - name: immich-http
      protocol: TCP
      port: 80
      targetPort: 2283
